--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.311.0",
+    "bluebird": "^3.5.2",
     "underscore": "^1.9.1"
   }
 }
